regression/stencil-dilate/tapa/src/output.txt
In file included from /usr/include/features.h:461,
                 from /usr/include/x86_64-linux-gnu/c++/9/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/9/bits/c++config.h:528,
                 from /usr/include/c++/9/type_traits:38,
                 from /usr/include/c++/9/ratio:38,
                 from /usr/include/c++/9/chrono:38,
                 from main.cpp:1:
/usr/include/x86_64-linux-gnu/sys/time.h:34:1: error: expected ‘,’ or ‘;’ before ‘extern’
   34 | __BEGIN_DECLS
      | ^~~~~~~~~~~~~
In file included from /home/ubuntu/tapa_m/src/tapa/host/tapa.h:9,
                 from /home/ubuntu/tapa_m/src/tapa.h:6,
                 from main.cpp:7:
/home/ubuntu/tapa_m/src/tapa/host/task.h: In instantiation of ‘static int64_t tapa::internal::invoker<void (&)(Params ...)>::invoke(void (&)(Params ...), const string&, Args&& ...) [with Args = {tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, int&}; Params = {tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, unsigned int}; int64_t = long int; std::string = std::__cxx11::basic_string<char>]’:
/home/ubuntu/tapa_m/src/tapa/host/task.h:78:33:   required from ‘static int64_t tapa::internal::invoker<void (&)(Params ...)>::invoke(bool, void (&)(Params ...), const string&, Args&& ...) [with Args = {tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, int&}; Params = {tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, unsigned int}; int64_t = long int; std::string = std::__cxx11::basic_string<char>]’
/home/ubuntu/tapa_m/src/tapa/host/tapa.h:36:59:   required from ‘int64_t tapa::invoke(Func&&, const string&, Args&& ...) [with Func = void (&)(tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, tapa::mmap<ap_uint<512> >, unsigned int); Args = {tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, tapa::read_write_mmap<ap_uint<512> >, int&}; int64_t = long int; std::string = std::__cxx11::basic_string<char>]’
main.cpp:178:21:   required from here
/home/ubuntu/tapa_m/src/tapa/host/task.h:92:9: warning: unused variable ‘_’ [-Wunused-variable]
   92 |     int _[] = {(
      |         ^
/home/ubuntu/AlveoLink/common/sw/src/xNativeFPGA.cpp: In member function ‘void AlveoLink::common::KERNEL::getBO(int)’:
/home/ubuntu/AlveoLink/common/sw/src/xNativeFPGA.cpp:111:10: warning: unused variable ‘state’ [-Wunused-variable]
  111 |     auto state = m_run.wait();
      |          ^~~~~
/home/ubuntu/AlveoLink/common/sw/src/xNativeFPGA.cpp: In member function ‘void AlveoLink::common::KERNEL::wait()’:
/home/ubuntu/AlveoLink/common/sw/src/xNativeFPGA.cpp:141:10: warning: unused variable ‘state’ [-Wunused-variable]
  141 |     auto state = m_run.wait();
      |          ^~~~~
/home/ubuntu/AlveoLink/network/roce_v2/sw/src/cmac.cpp: In member function ‘void AlveoLink::network_roce_v2::KernelCMAC::turnOn_RS_FEC(bool)’:
/home/ubuntu/AlveoLink/network/roce_v2/sw/src/cmac.cpp:55:13: error: ‘sleep’ was not declared in this scope
   55 |             sleep(5);
      |             ^~~~~
/home/ubuntu/AlveoLink/network/roce_v2/sw/src/cmac.cpp:60:13: error: ‘sleep’ was not declared in this scope
   60 |             sleep(5);
      |             ^~~~~
